--- a/index.html
+++ b/index.html
@@ -2,9 +2,99 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>personalCabinet</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
+<!-- Header -->
+<header>
+    <div class="logo">
+        <img src="logo.png" alt="Logo">
+        <h1>My Business</h1>
+    </div>
+    <div class="profile-info">
+        <span>Welcome, Imie Nazwisko</span>
+        <img src="https://via.placeholder.com/50" alt="Profile Image" class="profile-pic">
+    </div>
+</header>
+
+<!-- Main Container -->
+<div class="container">
+
+    <!-- Sidebar -->
+    <aside class="sidebar">
+        <div class="user-balance">
+            <h2>$2,245.00</h2>
+            <p>Current Balance</p>
+            <button class="btn">Deposit Funds</button>
+        </div>
+
+        <nav class="menu">
+            <ul>
+                <li><i class="fas fa-user"></i> My Profile</li>
+                <li><i class="fas fa-envelope"></i> Messages</li>
+                <li><i class="fas fa-truck"></i> Equipment</li>
+                <li><i class="fas fa-ad"></i> My Ads</li>
+                <li><i class="fas fa-chart-line"></i> Analytics</li>
+                <li><i class="fas fa-cogs"></i> Settings</li>
+            </ul>
+        </nav>
+    </aside>
+
+    <!-- Main Content -->
+    <main class="main-content">
+        <!-- Section 1: Overview -->
+        <section class="overview">
+            <h2>Dashboard Overview</h2>
+            <div class="stats">
+                <div class="stat-item">
+                    <h3>Active Equipment</h3>
+                    <p>23 units</p>
+                </div>
+                <div class="stat-item">
+                    <h3>Monthly Earnings</h3>
+                    <p>$12,340</p>
+                </div>
+                <div class="stat-item">
+                    <h3>Upcoming Orders</h3>
+                    <p>5 orders</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Section 2: Equipment Management -->
+        <section class="equipment">
+            <h2>Manage Your Equipment</h2>
+            <div class="equipment-list">
+                <!-- Equipment item -->
+                <div class="equipment-item">
+                    <img src="equipment_image.jpg" alt="Equipment">
+                    <div class="equipment-info">
+                        <h3>Crane Truck HD7</h3>
+                        <p>Status: Available</p>
+                        <p>Location: Poland</p>
+                        <button class="btn">Manage</button>
+                    </div>
+                </div>
+                <!-- Add more equipment items here -->
+            </div>
+            <button class="btn add-equipment">Add New Equipment</button>
+        </section>
+
+        <!-- Section 3: Analytics -->
+        <section class="analytics">
+            <h2>Business Analytics</h2>
+            <div class="chart">
+                <img src="chart_placeholder.png" alt="Chart">
+            </div>
+        </section>
+    </main>
+
+</div>
+
+<script src="js/index.js"></script>
 </body>
 </html>
